# beellixAI

./: README.md
beellix_aippt/: .gitignore  README.md  pyproject.toml
beellix_aippt/backend/: .env.example  config.py  main.py  models.py
beellix_aippt/backend/agents/: ppt_artist_agent.py  ppt_designer_agent.py  ppt_planner_agent.py
beellix_aippt/backend/llm/: base.py  gemini_client.py  qwen_client.py
beellix_aippt/backend/prompts/: __init__.py  gemini_prompts.py  qwen_prompts.py
beellix_aippt/backend/services/: pdf_service.py  ppt_service.py
beellix_aippt/backend/utils/: image_saver.py  text.py
beellix_aippt/frontend/: index.html  package-lock.json  package.json  vite.config.ts
beellix_aippt/frontend/src/: App.tsx
beellix_aippt/frontend/src/hooks/: useWebSocket.ts
beellix_aippt/frontend/src/utils/: exportPdf.ts  slideCache.ts
